tests/baselines/reference/parserMemberFunctionDeclarationAmbiguities1.errors.txt
parserMemberFunctionDeclarationAmbiguities1.ts(2,3): error TS2393: Duplicate function implementation.
parserMemberFunctionDeclarationAmbiguities1.ts(3,3): error TS2393: Duplicate function implementation.
parserMemberFunctionDeclarationAmbiguities1.ts(5,10): error TS2393: Duplicate function implementation.
parserMemberFunctionDeclarationAmbiguities1.ts(6,10): error TS2393: Duplicate function implementation.
parserMemberFunctionDeclarationAmbiguities1.ts(8,17): error TS2393: Duplicate function implementation.
parserMemberFunctionDeclarationAmbiguities1.ts(9,17): error TS2393: Duplicate function implementation.
parserMemberFunctionDeclarationAmbiguities1.ts(11,10): error TS2393: Duplicate function implementation.
parserMemberFunctionDeclarationAmbiguities1.ts(12,10): error TS2393: Duplicate function implementation.


==== parserMemberFunctionDeclarationAmbiguities1.ts (8 errors) ====
    class C {
      public() {}
      ~~~~~~
!!! error TS2393: Duplicate function implementation.
      static() {}
      ~~~~~~
!!! error TS2393: Duplicate function implementation.
    
      public public() {}
             ~~~~~~
!!! error TS2393: Duplicate function implementation.
      public static() {}
             ~~~~~~
!!! error TS2393: Duplicate function implementation.
    
      public static public() {}
                    ~~~~~~
!!! error TS2393: Duplicate function implementation.
      public static static() {}
                    ~~~~~~
!!! error TS2393: Duplicate function implementation.
      
      static public() {}
             ~~~~~~
!!! error TS2393: Duplicate function implementation.
      static static() {}
             ~~~~~~
!!! error TS2393: Duplicate function implementation.
    }